Change history
--------------

Release Candidate 1
===================

- Added RemoveCookie() method to IResponse

- Fixed a bug in Brail's ViewComponents, where a parameter was search using case sensitive search.

- Fixed a bug in ARFetch, where if the parameter was an array and the parameters didn't appear, a null reference would be thrown. Now it's returning an empty array.

- Updated boo binaries, should fix the problems with the build on machines with only one framework installed.

- Fixed a bug in Brail where a new line was required before a method call was recognized

- Added support for optional parameters in Brail, using the syntax ?foo will return null if the value was not set (instead of throwing.)

- Fixed a bug where Brail would throw on Empty Views.

- Added support for AutoLoadUnlessKeyIs in ARDataBinder - will load the object unless the key is a specific value
 Usages: public void Save([ARDataBinder(AutoLoadUnlessKeyIs=0)] User user) 

- Added checks for null id when doing data binding.

- Removed useless error handling from Brail, now you'll get the normal ASP.Net Yellow Screen Of Death on errors. More consistent with the rest of the framework.

- Added support for <?brail ?> tags for Brail, so it can be valid XML documents

- Added logging for Brail, so you can see the Boo code the preprocessor is generating.

- Added more verbose output to compiler errors in Brail.

- Changed the way Brail name the generated class, now the chances for name clashes are much lower. (View: Users.boo and a parameter Users will not cause problems).

- Fixed a bug with Brail not picking up changes that occured by VS.Net

- Fixed bug with NVelocity components that caused an InvalidCastException to be thrown by the Render method if there was something other than an IRailsEngineContext occupying the "context" key.

- MonoRail is now CLSCompliant (kudos to Roelof Blom <roelof.blom@gmail.com>)
