@@ -1,6 +1,6 @@
-<%
+<?
 condition = true
 if condition:
 	output "Brail is wonderful!"
 end
-%>
+?>
