@@ -31,6 +31,7 @@
 				<include name="System.Web.dll"/>
 				<include name="${bin.dir}\anrControls.Markdown.NET.dll"/>
 				<include name="${bin.dir}\log4net.dll"/>
+				<include name="${bin.dir}\Castle.MonoRail.TestSupport.dll"/>
 				<include name="${bin.dir}\Boo.Lang.Parser.dll"/>
 				<include name="${bin.dir}\Castle.MonoRail.Framework.dll"/>
 			</references>
