@@ -45,8 +45,8 @@
 
 	<Brail 
 		debug="true" 
-		saveToDisk="true" 
-		saveDirectory="C:\Code\CastleProject\MonoRail\TestSiteBrail\BrailGen" 
+		saveToDisk="False" 
+		saveDirectory="BrailGen" 
 		batch="true" 
 		commonScriptsDirectory="CommonScripts">
 		<reference assembly="Castle.MonoRail.Framework"/>
